[package]
name = "glados"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

[workspace]
members = [".", "glados-cartographer", "glados-core", "glados-web", "glados-monitor", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity.workspace = true
glados-core.workspace = true
glados-monitor.workspace = true
glados-audit.workspace = true
glados-web.workspace = true
migration.workspace = true
tokio = { workspace = true, features = ["full"] }

[workspace.dependencies]
alloy-primitives = "0.7.0"
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
enr = "0.10.0"
entity = { path = "entity" }
env_logger = "0.10.0"
ethportal-api = { git = "https://github.com/ethereum/trin" }
glados-core = { path = "glados-core" }
glados-monitor = { path = "glados-monitor" }
glados-audit = { path = "glados-audit" }
glados-web = { path = "glados-web" }
migration = { path = "migration" }
sea-orm = "0.11.3"
serde = "1.0.167"
serde_json = "1.0.95"
tokio = "1.22.0"
tracing = "0.1.37"
url = "2.3.1"
web3 = "0.18.0"
