[package]
name = "glados"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

[workspace]
members = [".", "glados-cartographer", "glados-core", "glados-web", "glados-monitor", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity.workspace = true
glados-core.workspace = true
glados-monitor.workspace = true
glados-audit.workspace = true
glados-web.workspace = true
migration.workspace = true
tokio = { workspace = true, features = ["full"] }

[workspace.dependencies]
alloy-primitives = "0.8.5"
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.0.26", features = ["derive"] }
enr = "0.10.0"
entity = { path = "entity" }
env_logger = "0.10.0"
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "580a72b9a0c059af82b67c7da7c8bd56ddb41ad2" }
glados-core = { path = "glados-core" }
glados-monitor = { path = "glados-monitor" }
glados-audit = { path = "glados-audit" }
glados-web = { path = "glados-web" }
migration = { path = "migration" }
pgtemp = "0.2.1"
rand = "0.8.5"
rstest = "0.16.0"
sea-orm = "0.11.3"
serde = "1.0.167"
serde_json = "1.0.95"
tokio = "1.22.0"
tracing = "0.1.37"
url = "2.3.1"
web3 = "0.18.0"
