[package]
name = "glados"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

[workspace]
members = [
    ".",
    "entity",
    "glados-audit",
    "glados-cartographer",
    "glados-core",
    "glados-web",
    "migration",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity.workspace = true
glados-core.workspace = true
glados-audit.workspace = true
glados-web.workspace = true
migration.workspace = true
tokio = { workspace = true, features = ["full"] }

[workspace.dependencies]
alloy-primitives = "1.3.1"
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.0.26", features = ["derive"] }
enr = "0.13.0"
entity = { path = "entity" }
env_logger = "0.10.0"
ethportal-api = "0.12.0"
futures = "0.3.31"
glados-core = { path = "glados-core" }
glados-audit = { path = "glados-audit" }
glados-web = { path = "glados-web" }
migration = { path = "migration" }
num-format = "0.4.4"
pgtemp = "0.2.1"
rand = "0.9.1"
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
rstest = "0.16.0"
sea-orm = {version = "1.1.14", features = ["sea-orm-internal", "sqlx-postgres"]}
serde = "1.0.167"
serde_json = "1.0.95"
strum = { version = "0.27.2", features = ["derive"] }
tokio = "1.22.0"
tracing = "0.1.37"
url = "2.3.1"
web3 = "0.18.0"
