[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.70.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.22"
clap = { version = "4.0.24", features = ["derive"] }
enr = "0.8.1"
ethereum-types = "0.14.0"
ethportal-api = "0.2.0"
glados-core = { path = "../glados-core" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-native-tls"] }
sea-query = "0.28.4"
tokio = { version = "1.21.2", features = ["macros"] }
env_logger = "0.10.0"
rand = "0.8.5"
