[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.22"
clap = { version = "4.0.24", features = ["derive"] }
ethereum-types = "0.14.0"
enr = "0.10.0"
ethportal-api = { git = "https://github.com/ethereum/trin" }
discv5 = "0.4.1"
lazy_static = "1.4.0"
migration = { path = "../migration" }
pgtemp = "0.2.1"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls"] }
sea-query = "0.28.4"
tokio = { version = "1.21.2", features = ["macros"] }
env_logger = "0.10.0"
rand = "0.8.5"
rstest = "0.16.0"
serde = "1.0.167"
primitive-types = "0.10.1"



