[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.76.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
discv5 = "0.4.1"
enr.workspace = true
env_logger.workspace = true
ethportal-api.workspace = true
lazy_static = "1.4.0"
migration.workspace = true
pgtemp.workspace = true
rand.workspace = true
sea-orm = { workspace = true, features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls"] }
sea-query = "0.28.4"
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
rstest.workspace = true
