[package]
name = "glados-audit"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.70.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.24", features = ["derive"] }
entity = { path = "../entity" }
env_logger = "0.9.3"
ethereum-types = "0.14.0"
ethportal-api = "0.2.0"
glados-core = { path = "../glados-core" }
migration = { path = "../migration" }
rand = "0.8.5"
sea-orm = "0.11.3"
serde_json = "1.0.95"
tokio = "1.21.2"
tracing = "0.1.37"
url = "2.3.1"
web3 = "0.18.0"

