[package]
name = "glados-audit"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.76.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
chrono.workspace= true
clap.workspace = true
entity.workspace = true
env_logger.workspace= true
pgtemp.workspace = true
enr.workspace = true
eth_trie = { git = "https://github.com/kolbyml/eth-trie.rs.git", rev = "7e57d3dfadee126cc9fda2696fb039bf7b6ed688" }
web3.workspace= true
ethportal-api.workspace = true
glados-core.workspace = true
migration.workspace = true
rand.workspace = true
sea-orm.workspace = true
serde_json.workspace= true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
