[package]
name = "glados-audit"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.85.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
chrono.workspace= true
clap.workspace = true
entity.workspace = true
env_logger.workspace= true
pgtemp.workspace = true
enr.workspace = true
eth_trie = "0.5.0"
web3.workspace= true
ethportal-api.workspace = true
glados-core.workspace = true
migration.workspace = true
rand.workspace = true
sea-orm.workspace = true
serde_json.workspace= true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
