[package]
name = "glados-cartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
entity.workspace = true
enr.workspace = true
env_logger.workspace = true
ethportal-api.workspace = true
glados-core.workspace = true
migration.workspace = true
sea-orm.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
url.workspace = true
