[package]
name = "glados-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.70.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
discv5 = "0.1.0"
ethereum-types = "0.14.0"
jsonrpc = "0.13.0"
serde = "1.0.147"
serde_json = "1.0.87"
sha2 = "0.10.6"
thiserror = "1.0.37"
env_logger = "0.9.3"
tracing = "0.1.37"
ethportal-api = "0.2.0"
url = "2.3.1"
jsonrpsee = { version = "0.18.2", features = ["async-client", "client"] }
jsonrpsee-types = "0.16.2"
rustc-hex = "2.1.0"
jsonrpsee-core = "0.16.2"

[dev-dependencies]
rstest = "0.11.0"

[target.'cfg(unix)'.dependencies]
reth-ipc = { version = "0.1.0", git = "https://github.com/paradigmxyz/reth.git"}
