[package]
name = "glados-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ethereum-types = "0.14.0"
chrono = "0.4.22"
jsonrpc = "0.13.0"
entity = { path = "../entity" }
sea-orm = "0.11.3"
serde = "1.0.147"
serde_json = "1.0.87"
sha2 = "0.10.6"
thiserror = "1.0.37"
env_logger = "0.9.3"
tracing = "0.1.37"
ethportal-api = { git = "https://github.com/ethereum/trin" }
url = "2.3.1"
jsonrpsee = { version = "0.20.0", features = ["async-client", "client"] }
rustc-hex = "2.1.0"

[dev-dependencies]
rstest = "0.11.0"
