[package]
name = "glados-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.85.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
chrono.workspace = true
entity.workspace = true
env_logger.workspace = true
ethportal-api.workspace = true
jsonrpsee = { version = "0.24.4", features = ["async-client", "client"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.6"
thiserror = "1.0.37"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
