[package]
name = "glados-monitor"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glados-core = { path = "../glados-core" }
migration = { path = "../migration" }
chrono = "0.4.22"
entity = { path = "../entity" }
clap = { version = "4.0.24", features = ["derive"] }
web3 = "0.18.0"
tokio = "1.21.2"
sea-orm = "0.11.3"
ethereum-types = "0.14.0"
env_logger = "0.9.3"
futures = "0.3.21"
serde_json = "1.0.89"
tracing = "0.1.37"
ethportal-api = { git = "https://github.com/ethereum/trin" }
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls"] }
url = "2.2.2"
