[package]
name = "glados-monitor"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.81.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
entity.workspace = true
env_logger.workspace = true
ethportal-api.workspace = true
futures.workspace = true
glados-core.workspace = true
migration.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
web3.workspace = true
