[package]
name = "glados-web"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.64.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
askama = "0.11.1"
axum = "0.6.1"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
entity = { path = "../entity" }
env_logger = "0.9.3"
ethereum-types = "0.14.0"
ethportal-api = "0.1.6"
glados-core = { path = "../glados-core" }
hex = "0.4.3"
migration = { path = "../migration" }
sea-orm = "0.10.2"
serde = "1.0.158"
tokio = "1.22.0"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"

