[package]
name = "glados-web"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.76.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.7.0"
anyhow = "1.0.68"
askama = { version = "0.11.1", features = ["serde-json"] }
axum = "0.6.11"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
entity = { path = "../entity" }
env_logger = "0.9.3"
ethportal-api = { git = "https://github.com/ethereum/trin" }
enr = "0.10.0"
glados-core = { path = "../glados-core" }
migration = { path = "../migration" }
itertools = "0.10.5"
sea-orm = "0.11.3"
serde = "1.0.167"
tokio = "1.22.0"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"
