[package]
name = "glados-web"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.87.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy = "1.0.35"
anyhow.workspace = true
askama = { version = "0.14.0", features = ["serde_json"] }
axum = "0.6.11"
chrono.workspace = true
clap.workspace = true
enr.workspace = true
entity.workspace = true
env_logger.workspace = true
ethportal-api.workspace = true
glados-core.workspace = true
itertools = "0.10.5"
migration.workspace = true
sea-orm.workspace = true
serde.workspace = true
strum.workspace = true
tokio.workspace = true
tower-http = { version = "0.3.5", features = ["fs"] }
tracing.workspace = true
