[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.81.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-std = { version = "^1", features = ["attributes", "tokio1"] }
futures.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
tokio-util = "0.7.13"
tracing.workspace = true

[dependencies.sea-orm-migration]
version = "^0.11.3"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[dev-dependencies]
pgtemp.workspace = true
