[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.81.0"
authors = ["Piper Merriam <piper@pipermerriam.com>"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-std = { version = "^1", features = ["attributes", "tokio1"] }
futures.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
sea-orm-migration = {version = "1.1.14", features = ["runtime-tokio-native-tls", "sqlx-postgres"]}
tokio-util = "0.7.13"
tracing.workspace = true

[dev-dependencies]
pgtemp.workspace = true
